--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.16.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql2": "^3.3.4"
+    "morgan": "^1.10.0",
+    "mysql2": "^3.3.4",
+    "socket.io": "^4.7.1"
+  },
+  "devDependencies": {
+    "jest": "^29.5.0",
+    "socket.io-client": "^4.7.1",
+    "supertest": "^6.3.3"
   }
 }
