--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-node_modules
-# Keep environment variables out of version control
-.env
+node_modules/
+npm-debug.log
+.DS_Store
+dockerfile
+docker-compose.yml
