Updated functionality of Comments

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="mysql://prisma:visualagenda-0806@visualagenda.mysql.database.azure.com/prisma"
+DATABASE_URL="mysql://root:0806@localhost:3306/visual_agenda"
