--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
+    "prisma:generate": "npx prisma generate",
+    "prisma:db-push": "npx prisma db push"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +22,9 @@
   "devDependencies": {
     "jest": "^29.5.0",
     "socket.io-client": "^4.7.1",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "prisma": "^3.0.2",
+    "mysql2": "^2.3.0",
+    "express": "^4.17.1"
   }
 }
